--- a/src/server_manager/ui_components/outline-server-settings-styles.html
+++ b/src/server_manager/ui_components/outline-server-settings-styles.html
@@ -18,7 +18,7 @@
     This file holds common styles for outline-server-settings and outline-validated-input
  -->
 
- <dom-module id='outline-server-settings-styles'>
+<dom-module id="outline-server-settings-styles">
   <template>
     <style>
       /* Skip processing these with postcss-rtl as it incorrectly parses the border-color
@@ -34,18 +34,18 @@
         margin-bottom: 14px;
         --paper-input-container-label-focus: {
           color: var(--primary-green);
-        };
+        }
         --paper-input-container-underline-focus: {
           border-color: var(--primary-green);
-        };
+        }
         --paper-input-container-label: {
           font-size: 14px;
           line-height: 22px;
-        };
+        }
         --paper-input-container-color: var(--medium-gray);
         --paper-input-container-input: {
           color: #fff;
-        };
+        }
         --paper-input-container-invalid-color: #f28b82;
       }
       /* rtl:end:ignore */
@@ -53,17 +53,17 @@
       paper-input[readonly] {
         --paper-input-container-underline: {
           display: none;
-        };
+        }
         --paper-input-container-underline-focus: {
           display: none;
-        };
+        }
         --paper-input-container-underline-disabled: {
           display: none;
-        };
+        }
         --paper-input-container-disabled: {
           opacity: 1;
         }
       }
     </style>
   </template>
- </dom-module>
+</dom-module>
