--- a/src/server_manager/ui_components/outline-step-view.html
+++ b/src/server_manager/ui_components/outline-step-view.html
@@ -13,7 +13,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<link rel='import' href='../bower_components/polymer/polymer.html'>
+<link rel="import" href="../bower_components/polymer/polymer.html" />
 
 <dom-module id="outline-step-view">
   <template>
@@ -68,11 +68,11 @@
   </template>
   <script>
     Polymer({
-      is: 'outline-step-view',
+      is: "outline-step-view",
       properties: {
         displayAction: {
           type: Boolean,
-          value: false
+          value: false,
         },
       },
     });
