--- a/src/server_manager/ui_components/outline-about-dialog.html
+++ b/src/server_manager/ui_components/outline-about-dialog.html
@@ -13,10 +13,10 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<link rel='import' href='../bower_components/polymer/polymer.html'>
-<link rel='import' href='../bower_components/paper-dialog/paper-dialog.html'>
+<link rel="import" href="../bower_components/polymer/polymer.html" />
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html" />
 
-<link rel="import" href="./cloud-install-styles.html">
+<link rel="import" href="./cloud-install-styles.html" />
 
 <dom-module id="outline-about-dialog">
   <template>
@@ -46,7 +46,7 @@
       }
 
       a {
-        color: #00AC9B;
+        color: #00ac9b;
       }
 
       #licenses {
@@ -60,13 +60,17 @@
 
     <paper-dialog id="dialog" modal>
       <div>
-        <img id="outlineLogo" src="images/manager-about-logo2x.png">
+        <img id="outlineLogo" src="images/manager-about-logo2x.png" />
       </div>
-      <p id='version' inner-h-t-m-l="[[localize('about-version', 'version', outlineVersion)]]"></p>
-      <p inner-h-t-m-l="[[localize('about-outline', 'jigsawUrl', 'https://jigsaw.google.com', 'shadowsocksUrl', 'https://shadowsocks.org', 'gitHubUrl', 'https://github.com/jigsaw-Code/?q=outline', 'redditUrl', 'https://www.reddit.com/r/outlinevpn', 'mediumUrl', 'https://medium.com/jigsaw')]]">></p>
+      <p id="version" inner-h-t-m-l="[[localize('about-version', 'version', outlineVersion)]]"></p>
+      <p
+        inner-h-t-m-l="[[localize('about-outline', 'jigsawUrl', 'https://jigsaw.google.com', 'shadowsocksUrl', 'https://shadowsocks.org', 'gitHubUrl', 'https://github.com/jigsaw-Code/?q=outline', 'redditUrl', 'https://www.reddit.com/r/outlinevpn', 'mediumUrl', 'https://medium.com/jigsaw')]]"
+      >
+        >
+      </p>
       <p>
         <a href="https://jigsaw.google.com/">
-          <img src="images/jigsaw-logo.svg">
+          <img src="images/jigsaw-logo.svg" />
         </a>
       </p>
       <div class="buttons">
@@ -77,14 +81,14 @@
 
   <script>
     Polymer({
-      is: 'outline-about-dialog',
+      is: "outline-about-dialog",
       properties: {
         localize: {type: Function, readonly: true},
-        outlineVersion: String
+        outlineVersion: String,
       },
-      open: function () {
+      open: function() {
         this.$.dialog.open();
-      }
+      },
     });
   </script>
 </dom-module>
