--- a/src/server_manager/ui_components/outline-do-oauth-step.html
+++ b/src/server_manager/ui_components/outline-do-oauth-step.html
@@ -13,10 +13,10 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<link rel='import' href='../bower_components/polymer/polymer.html'>
-<link rel='import' href='../bower_components/iron-pages/iron-pages.html'>
-<link rel="import" href="./cloud-install-styles.html">
-<link rel="import" href="./outline-step-view.html">
+<link rel="import" href="../bower_components/polymer/polymer.html" />
+<link rel="import" href="../bower_components/iron-pages/iron-pages.html" />
+<link rel="import" href="./cloud-install-styles.html" />
+<link rel="import" href="./outline-step-view.html" />
 
 <dom-module id="outline-do-oauth-step">
   <template>
@@ -45,7 +45,7 @@
         margin: 24px 0;
         padding: 24px;
         background: var(--background-contrast-color);
-        box-shadow: 0 0 2px 0 rgba(0,0,0,0.14), 0 2px 2px 0 rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
         border-radius: 2px;
       }
       @media (min-width: 1025px) {
@@ -62,7 +62,7 @@
       .card paper-button {
         color: var(--light-gray);
         width: 100%;
-        border: 1px solid rgba(255,255,255,0.12);
+        border: 1px solid rgba(255, 255, 255, 0.12);
         border-radius: 2px;
       }
       .card paper-button[disabled] {
@@ -75,7 +75,7 @@
       }
     </style>
 
-    <iron-pages id='pages' attr-for-selected='id' selected='{{ currentPage }}'>
+    <iron-pages id="pages" attr-for-selected="id" selected="{{ currentPage }}">
       <outline-step-view id="connectAccount">
         <span slot="step-title">[[localize('oauth-connect-title')]]</span>
         <span slot="step-description">[[localize('oauth-connect-description')]]</span>
@@ -96,7 +96,7 @@
             <img class="mirror" src="images/do_oauth_email.svg" />
             <p>[[localize('oauth-verify-tag')]]</p>
           </div>
-        <paper-button on-tap="_cancelTapped">[[localize('oauth-sign-out')]]</paper-button>
+          <paper-button on-tap="_cancelTapped">[[localize('oauth-sign-out')]]</paper-button>
         </paper-card>
       </outline-step-view>
 
@@ -108,7 +108,7 @@
             <img class="mirror" src="images/do_oauth_billing.svg" />
             <p>[[localize('oauth-billing-tag')]]</p>
           </div>
-        <paper-button on-tap="_cancelTapped">[[localize('oauth-sign-out')]]</paper-button>
+          <paper-button on-tap="_cancelTapped">[[localize('oauth-sign-out')]]</paper-button>
         </paper-card>
       </outline-step-view>
 
@@ -120,29 +120,28 @@
             <img class="mirror" src="images/do_oauth_done.svg" />
             <p>[[localize('oauth-account-active-tag')]]</p>
           </div>
-        <paper-button disabled>[[localize('oauth-sign-out')]]</paper-button>
+          <paper-button disabled>[[localize('oauth-sign-out')]]</paper-button>
         </paper-card>
       </outline-step-view>
     </iron-pages>
-
   </template>
   <script>
     Polymer({
-      is: 'outline-do-oauth-step',
+      is: "outline-do-oauth-step",
       properties: {
         currentPage: {
           type: String,
-          value: 'connectAccount'
+          value: "connectAccount",
         },
         cancelButtonText: {
           type: String,
-          value: 'Cancel'
+          value: "Cancel",
         },
         localize: {
           type: Function,
-          readonly: true
+          readonly: true,
         },
-        onCancel: Function
+        onCancel: Function,
       },
       _cancelTapped: function() {
         if (this.onCancel) {
@@ -150,17 +149,17 @@
         }
       },
       showEmailVerification: function() {
-        this.currentPage = 'verifyEmail';
+        this.currentPage = "verifyEmail";
       },
       showBilling: function() {
-        this.currentPage = 'enterBilling'
+        this.currentPage = "enterBilling";
       },
       showAccountActive: function() {
-        this.currentPage = 'accountActive';
+        this.currentPage = "accountActive";
       },
       showConnectAccount: function() {
-        this.currentPage = 'connectAccount';
-      }
+        this.currentPage = "connectAccount";
+      },
     });
   </script>
 </dom-module>
