--- a/src/server_manager/ui_components/outline-server-progress-step.html
+++ b/src/server_manager/ui_components/outline-server-progress-step.html
@@ -13,14 +13,14 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<link rel='import' href='../bower_components/polymer/polymer.html'>
-<link rel='import' href='../bower_components/paper-progress/paper-progress.html'>
-<link rel='import' href='../bower_components/paper-button/paper-button.html'>
+<link rel="import" href="../bower_components/polymer/polymer.html" />
+<link rel="import" href="../bower_components/paper-progress/paper-progress.html" />
+<link rel="import" href="../bower_components/paper-button/paper-button.html" />
 
-<link rel="import" href="./cloud-install-styles.html">
-<link rel="import" href="./outline-progress-spinner.html">
-<link rel="import" href="./outline-step-view.html">
-<link rel="import" href="./style.css">
+<link rel="import" href="./cloud-install-styles.html" />
+<link rel="import" href="./outline-progress-spinner.html" />
+<link rel="import" href="./outline-step-view.html" />
+<link rel="import" href="./style.css" />
 
 <dom-module id="outline-server-progress-step">
   <template>
@@ -32,7 +32,7 @@
       }
       .card {
         margin-top: 72px;
-        box-shadow: 0 0 2px 0 rgba(0,0,0,0.14), 0 2px 2px 0 rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
         border-radius: 2px;
         color: var(--light-gray);
         background: var(--background-contrast-color);
@@ -63,27 +63,28 @@
       <span slot="step-title">[[localize('setup-do-title')]]</span>
       <span slot="step-description">[[localize('setup-do-description')]]</span>
       <span slot="step-action">
-        <paper-button id='cancelButton' hidden$='{{!showCancelButton}}' on-tap='handleCancelTapped'>[[localize('cancel')]]</paper-button>
+        <paper-button id="cancelButton" hidden$="{{!showCancelButton}}" on-tap="handleCancelTapped"
+          >[[localize('cancel')]]</paper-button
+        >
       </span>
-      <div class='card'>
+      <div class="card">
         <outline-progress-spinner></outline-progress-spinner>
-        <div class='servername'>
+        <div class="servername">
           <p>{{serverName}}</p>
         </div>
-        <paper-progress id='bar' class='transiting'></paper-progress>
+        <paper-progress id="bar" class="transiting"></paper-progress>
       </div>
     </outline-step-view>
-
   </template>
 
   <script>
     Polymer({
-      is: 'outline-server-progress-step',
+      is: "outline-server-progress-step",
       properties: {
         serverName: String,
         showCancelButton: Boolean,
         updateIntervalId: Number,
-        localize: Function
+        localize: Function,
       },
       start: function() {
         if (this.updateIntervalId) {
@@ -100,8 +101,7 @@
           // This heuristic happens to correspond to a Weibull distribution.
           const k = expected / uncertainty;
           const lambda = expected / Math.pow(Math.log(2), 1 / k);
-          const conditionalMedian = lambda *
-              Math.pow(Math.pow(elapsed / lambda, k) + Math.log(2), 1 / k);
+          const conditionalMedian = lambda * Math.pow(Math.pow(elapsed / lambda, k) + Math.log(2), 1 / k);
           this.$.bar.value = 100 * (elapsed / conditionalMedian);
         }, updateInterval * 1000);
       },
@@ -113,9 +113,8 @@
         this.updateIntervalId = null;
       },
       handleCancelTapped: function() {
-        this.fire('CancelServerCreationRequested');
-      }
+        this.fire("CancelServerCreationRequested");
+      },
     });
   </script>
-
 </dom-module>
