--- a/src/server_manager/ui_components/outline-share-dialog.html
+++ b/src/server_manager/ui_components/outline-share-dialog.html
@@ -13,12 +13,12 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<link rel='import' href='../bower_components/paper-dialog/paper-dialog.html'>
-<link rel='import' href='../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html'>
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html" />
+<link rel="import" href="../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html" />
 
-<dom-module id='outline-share-dialog'>
+<dom-module id="outline-share-dialog">
   <template>
-    <style include='cloud-install-styles'></style>
+    <style include="cloud-install-styles"></style>
     <style>
       :host {
         margin: 0px;
@@ -39,14 +39,14 @@
       }
       #dialog-header h3 {
         font-size: 18px;
-        color: rgba(0,0,0,0.87);
+        color: rgba(0, 0, 0, 0.87);
         opacity: 0.87;
         line-height: 24px;
         padding: 0;
       }
       #dialog-header p {
         font-size: 14px;
-        color: rgba(0,0,0,0.54);
+        color: rgba(0, 0, 0, 0.54);
         line-height: 20px;
         max-width: 85%;
         margin: 0;
@@ -54,7 +54,7 @@
       #selectableText {
         height: 144px;
         overflow: auto;
-        background-color: #ECEFF1;
+        background-color: #eceff1;
         border-radius: 2px;
         margin: 0;
         padding: 18px;
@@ -96,7 +96,9 @@
     <paper-dialog id="dialog" modal>
       <div id="dialog-header">
         <h3>[[localize('share-title')]]</h3>
-        <p inner-h-t-m-l="[[localize('share-description', 'openLink', '<a href=https://securityplanner.org/#/all-recommendations>', 'closeLink', '</a>')]]"></p>
+        <p
+          inner-h-t-m-l="[[localize('share-description', 'openLink', '<a href=https://securityplanner.org/#/all-recommendations>', 'closeLink', '</a>')]]"
+        ></p>
       </div>
       <div contenteditable id="selectableText" style="-webkit-text-size-adjust: 100%;">
         <p>[[localize('share-invite')]]</p>
@@ -111,7 +113,9 @@
           </li>
           <li>
             [[localize('share-invite-instructions')]]
-            <a href="https://github.com/Jigsaw-Code/outline-client/blob/master/docs/invitation-instructions.md">https://github.com/Jigsaw-Code/outline-client/blob/master/docs/invitation-instructions.md</a>
+            <a href="https://github.com/Jigsaw-Code/outline-client/blob/master/docs/invitation-instructions.md"
+              >https://github.com/Jigsaw-Code/outline-client/blob/master/docs/invitation-instructions.md</a
+            >
           </li>
         </ol>
       </div>
@@ -126,17 +130,17 @@
     // TODO(alalama): add a language selector. This should be a separate instance of Polymer.AppLocalizeBehavior
     // so the app language is not changed. Consider refactoring l10n into a separate Polymer behavior.
     Polymer({
-      is: 'outline-share-dialog',
+      is: "outline-share-dialog",
       properties: {
         localize: {type: Function, readonly: true},
       },
-      created: function () {
-        this.clipboard = require('clipboard-polyfill');
+      created: function() {
+        this.clipboard = require("clipboard-polyfill");
       },
       open: function(acessKey, s3Url) {
         this.acessKey = acessKey;
         this.s3Url = s3Url;
-        this.$.copyText.setAttribute('hidden', true);
+        this.$.copyText.setAttribute("hidden", true);
         this.$.dialog.open();
       },
       copyClicked: function() {
@@ -144,8 +148,8 @@
         dt.setData("text/plain", this.$.selectableText.innerText);
         dt.setData("text/html", this.$.selectableText.innerHTML);
         this.clipboard.write(dt);
-        this.$.copyText.removeAttribute('hidden');
-      }
+        this.$.copyText.removeAttribute("hidden");
+      },
     });
   </script>
 </dom-module>
